EAEC-65: Fix padding on mobile scrolling menu

--- a/styles/components/_menu-secondary.scss
+++ b/styles/components/_menu-secondary.scss
@@ -1,5 +1,4 @@
 .menu-schools {
-  padding: 0 24px;
   height: 100%;
 
   @include media-breakpoint-up(md) {
